added first paragraph

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Glitz and Glam</title>
   </head>
   <body>
-    <h2>shop with us</h2>
+    <h2>shop with us!</h2>
+    <p>This is the place where you will get variety of clothings</p>
   </body>
 </html>
