second paragraph added

--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
   <body>
     <h2>shop with us!</h2>
     <p>This is the place where you will get variety of clothings</p>
+    <p>Come to the shop and you'll get the following items;</p>
   </body>
 </html>
