added my first list of items

--- a/index.html
+++ b/index.html
@@ -10,5 +10,11 @@
     <h2>shop with us!</h2>
     <p>This is the place where you will get variety of clothings</p>
     <p>Come to the shop and you'll get the following items;</p>
+    <ul>
+      <li>Jackets</li>
+      <li>Shorts</li>
+      <li>Pants</li>
+      <li>Shirts</li>
+    </ul>
   </body>
 </html>
