--- a/index.html
+++ b/index.html
@@ -17,5 +17,7 @@
       <li>Shirts</li>
     </ul>
     <p>Examples in pictures;</p>
+    <img src="images/download (1).jpeg" alt="ladies wear" />
+    <img src="images/download.jpeg" alt="tops" />
   </body>
 </html>
