the last paragraph

--- a/index.html
+++ b/index.html
@@ -19,5 +19,6 @@
     <p>Examples in pictures;</p>
     <img src="images/download (1).jpeg" alt="ladies wear" />
     <img src="images/download.jpeg" alt="tops" />
+    <p>Welcome all hope you enjoy!!!</p>
   </body>
 </html>
