--- a/index.html
+++ b/index.html
@@ -20,5 +20,6 @@
     <img src="images/download (1).jpeg" alt="ladies wear" />
     <img src="images/download.jpeg" alt="tops" />
     <p>Welcome all hope you enjoy!!!</p>
+    <img src="images/another.gif" alt="happiness" />
   </body>
 </html>
